concord_macros/tests/trybuild/fail/pagination/pagination_unknown_field_offset_limit.stderr
error: unknown pagination field `cursor` for OffsetLimitPagination; allowed fields: offset_key, limit_key, offset, limit
  --> tests/trybuild/fail/pagination/pagination_unknown_field_offset_limit.rs:15:13
   |
15 |             cursor = start,
   |             ^^^^^^
